--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,36 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    padding: 0;
+    margin: 0;
+    font-size: 16px;
+    background-image: url(./assets/img/background2.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+body::-webkit-scrollbar {
+    display: none;
+}
+
+@font-face {
+    font-family: FredokaOne;
+    src: url(./assets/fonts/FredokaOne-Regular.ttf);
+}
+
+@font-face {
+    font-family: KaushanScript;
+    src: url(./assets/fonts/KaushanScript-Regular.ttf);
+}
+
+@font-face {
+    font-family: Pacifico;
+    src: url(./assets/fonts/Pacifico-Regular.ttf);
+}
+
+@font-face {
+    font-family: PottaOne;
+    src: url(./assets/fonts/PottaOne-Regular.ttf);
+}
